--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,5 @@
-@media only screen  and (max-width:500px){
-    
+@media only screen and (max-width:500px) {
+    .reader {
+        width: 300px;
+    }
 }
